--- a/src/app/features/patient-details/edit-form/form.component.html
+++ b/src/app/features/patient-details/edit-form/form.component.html
@@ -2,17 +2,17 @@
   class="mb-4 grid grid-cols-3 gap-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6 focus:border-2">
   <div>
     <div class="flex flex-row">
-      <label class="text-label" for="patient-name">{{ 'patientName' | translate }}</label>
+      <label class="text-label" for="patient-name">{{ 'patient.name' | translate }}</label>
       <img
         class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
         src="../../../assets/info.svg"
         data-tooltip-target="patient-first-name-tooltip"
-        alt="First name of the patient" /><!-- TODO: this is not properly translated -->
+        alt="{{ 'tooltips.patient.name' | translate }}" />
       <div
         id="patient-first-name-tooltip"
         role="tooltip"
         class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-        First name of the patient<!-- TODO: this is not properly translated -->
+        {{ 'tooltips.patient.name' | translate }}
         <div class="tooltip-arrow" data-popper-arrow></div>
       </div>
     </div>
@@ -20,47 +20,47 @@
       type="text"
       id="patient-name"
       [(ngModel)]="patient.firstname"
-      placeholder="{{ 'patientNamePlaceholder' | translate }}"
+      placeholder="{{ 'placeholders.patient.name' | translate }}"
       class="w-full rounded-md border border-tone-2 py-1.5 pl-2 shadow-sm focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary"
       [disabled]="!canEdit" />
   </div>
   <div>
     <div class="flex flex-row">
-      <label class="text-label" for="patient-last-name">{{ 'patientLastName' | translate }}</label>
+      <label class="text-label" for="patient-last-name">{{ 'patient.lastName' | translate }}</label>
       <img
         class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
         src="../../../assets/info.svg"
         data-tooltip-target="patient-last-name-tooltip"
-        alt="Last name of the patient" /><!-- TODO: this is not properly translated -->
+        alt="{{ 'tooltips.patient.lastName' | translate }}" />
       <div
         id="patient-last-name-tooltip"
         role="tooltip"
         class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-        Last name of the patient<!-- TODO: this is not properly translated -->
+        {{ 'tooltips.patient.lastName' | translate }}
         <div class="tooltip-arrow" data-popper-arrow></div>
       </div>
     </div>
     <input
       type="text"
       id="patient-last-name"
-      placeholder="{{ 'patientLastNamePlaceholder' | translate }}"
+      placeholder="{{ 'placeholders.patient.name' | translate }}"
       [(ngModel)]="patient.lastname"
       class="w-full rounded-md border border-tone-2 py-1.5 pl-2 shadow-sm focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary"
       [disabled]="!canEdit" />
   </div>
   <div>
     <div class="flex flex-row">
-      <label class="text-label" for="patient-birthdate">{{ 'patientBirthDate' | translate }}</label>
+      <label class="text-label" for="patient-birthdate">{{ 'patient.birthdate' | translate }}</label>
       <img
         class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
         src="../../../assets/info.svg"
         data-tooltip-target="patient-birthdate-tooltip"
-        alt="Date of birth of the patient" /><!-- TODO: this is not properly translated -->
+        alt="{{ 'tooltips.patient.birthdate' | translate }}" />
       <div
         id="patient-birthdate-tooltip"
         role="tooltip"
         class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-        Birthdate of the patient<!-- TODO: this is not properly translated -->
+        {{ 'tooltips.patient.birthdate' | translate }}
         <div class="tooltip-arrow" data-popper-arrow></div>
       </div>
     </div>
