--- a/src/app/features/patient-records/list/list.component.html
+++ b/src/app/features/patient-records/list/list.component.html
@@ -2,9 +2,9 @@
   <table class="w-full table-auto text-left text-sm">
     <thead class="border-b border-label text-label">
       <tr>
-        <th scope="col" class="px-6 py-3">{{ 'id' | translate }}</th>
-        <th scope="col" class="px-6 py-3">{{ 'timestamp' | translate }}</th>
-        <th scope="col" class="px-6 py-3">{{ 'risk' | translate }}</th>
+        <th scope="col" class="px-6 py-3">{{ 'scores.id' | translate }}</th>
+        <th scope="col" class="px-6 py-3">{{ 'scores.timestamp' | translate }}</th>
+        <th scope="col" class="px-6 py-3">{{ 'scores.risk' | translate }}</th>
         <th *ngIf="showDetailsButton" scope="col" class="inline-block px-6 py-3"></th>
       </tr>
     </thead>
@@ -21,16 +21,17 @@
         <!-- <td class="px-6 py-4">{{ record.score }}</td> -->
         <td class="px-6 py-6">
           <div>
-            <ce-risk-label [risk]="record.risk ?? 'INCOMPLETE'" [riskClass]="record.riskClass"></ce-risk-label>
+            <ce-risk-label
+              [risk]="record.risk ?? ('scores.incomplete' | translate)"
+              [riskClass]="record.riskClass"></ce-risk-label>
           </div>
         </td>
         <td *ngIf="showDetailsButton" class="px-6 py-6">
           <button class="edit self-end" (click)="openSpecificScore.emit(record.requestId)">
-            {{ 'details' | translate }}
+            {{ 'scores.details' | translate }}
           </button>
           <button *ngIf="record.canEdit" class="pl-5 text-secondary" (click)="editSpecificScore.emit(record.requestId)">
-            Edit
-            <!-- TODO: translation -->
+            {{ 'scores.edit' | translate }}
           </button>
         </td>
       </tr>
