--- a/src/app/features/score-details/recommendation-table/row/row.component.html
+++ b/src/app/features/score-details/recommendation-table/row/row.component.html
@@ -11,7 +11,7 @@
     </p>
   </div>
   <button class="edit self-end" (click)="toggleLongText()">
-    {{ longTextVisible ? 'less' : 'more' }}
+    {{ longTextVisible ? ('accordion.less' | translate) : ('accordion.more' | translate) }}
   </button>
 </td>
 <td class="rounded-lg border border-solid border-tone-2 bg-white p-2 text-center">
