--- a/src/app/features/patient-details/category/list-flexible-edit/list-flexible-edit.component.html
+++ b/src/app/features/patient-details/category/list-flexible-edit/list-flexible-edit.component.html
@@ -9,7 +9,7 @@
     class="relative">
     <div class="cursor-move" cdkDrag>
       <div *cdkDragPlaceholder></div>
-      <ce-biomarker [biomarker]="biomarker" [sideEffectMarkers]="biomarkers" [unitTypeEditable]="true" />
+      <ce-biomarker-lab-result [biomarker]="biomarker" [unitTypeEditable]="true" />
       <!-- todo unit type editable ? also splitting - waiting for refactor of the form? -->
     </div>
   </div>
