--- a/src/app/features/patient-details/edit-form/form.component.html
+++ b/src/app/features/patient-details/edit-form/form.component.html
@@ -74,4 +74,4 @@
       [disabled]="!canEdit" />
   </div>
 </div>
-<ce-category [uniqueCategories]="uniqueCategories" [biomarkers]="biomarkers" class="flex flex-col" />
+<ce-category [biomarkers]="biomarkers" class="flex flex-col" />
