--- a/src/app/features/patient-details/category/category.component.html
+++ b/src/app/features/patient-details/category/category.component.html
@@ -1,23 +1,26 @@
-<ng-container *ngIf="biomarkers.length > 0; else noContent">
+<ng-container *ngIf="biomarkers.medicalHistory.length > 0 || biomarkers.labResults.length > 0; else noContent">
   <!-- Fixed biomarkers -->
   <ce-category-list-fixed
+    *ngIf="biomarkers.medicalHistory"
     class="mb-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6"
-    [biomarkers]="fixedBiomarkers"></ce-category-list-fixed>
+    [biomarkers]="biomarkers.medicalHistory"
+    [categories]="biomarkers.categories.medicalHistory">
+  </ce-category-list-fixed>
 
   <!-- Flexible biomarkers -->
   <!-- non-edit-mode -->
   <ce-category-list-flexible
-    *ngIf="!isEditingEnabled"
+    *ngIf="!isEditingEnabled && biomarkers.labResults"
     class="mb-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6"
-    [biomarkers]="flexibleBiomarkers"
+    [biomarkers]="biomarkers.labResults"
     (isEditingEnabled)="enableEditMode()">
   </ce-category-list-flexible>
 
   <!-- edit-mode -->
   <ce-category-list-flexible-edit
-    *ngIf="isEditingEnabled"
+    *ngIf="isEditingEnabled && biomarkers.labResults"
     class="mb-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6"
-    [biomarkers]="flexibleBiomarkers"
+    [biomarkers]="biomarkers.labResults"
     (saveChanges)="savePreferences()">
   </ce-category-list-flexible-edit>
 </ng-container>
