CE-159 Switching language navigates user to home page
* remove href

--> href="#" is routing to root page after language change

* show cursor pointer for the language options


Approved-by: Angelo Meisel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,8 +31,7 @@
           <ul class="bg-white py-2 font-medium" role="none">
             <li>
               <a
-                href="#"
-                class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
+                class="block cursor-pointer px-4 py-2 text-gray-700 hover:bg-gray-100"
                 role="menuitem"
                 (click)="selectLanguage('en-GB')">
                 <div class="inline-flex items-center">{{ LOCALE_DISPLAY.get('en-GB') }}</div>
@@ -40,8 +39,7 @@
             </li>
             <li>
               <a
-                href="#"
-                class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
+                class="block cursor-pointer px-4 py-2 text-gray-700 hover:bg-gray-100"
                 role="menuitem"
                 (click)="selectLanguage('de-DE')">
                 <div class="inline-flex items-center">{{ LOCALE_DISPLAY.get('de-DE') }}</div>
