Bugfix/CE-223 remove mockdata usage
* remove mockdata usage from request and scoring components

* Fixed entering requests and display of requests with new Biomarkerschema


Approved-by: Philipp Schlegel

--- a/src/app/features/patient-details/patient-details.component.html
+++ b/src/app/features/patient-details/patient-details.component.html
@@ -13,7 +13,9 @@
     <ce-patient-data-form
       *ngIf="data.biomarkerTemplate"
       [patient]="data.patient!"
-      [formMode]="data.formMode"></ce-patient-data-form>
+      [formMode]="data.formMode"
+      [data]="data.patientData"
+      [biomarkers]="data.biomarkerTemplate"></ce-patient-data-form>
   </div>
   <ce-score
     *ngIf="data.currentScore"
