--- a/src/app/features/patient-details/category/category.component.html
+++ b/src/app/features/patient-details/category/category.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngIf="biomarkers.medicalHistory.length > 0 || biomarkers.labResults.length > 0; else noContent">
+<ng-container
+  *ngIf="biomarkers && (biomarkers.medicalHistory.length > 0 || biomarkers.labResults.length > 0); else noContent">
   <!-- Fixed biomarkers -->
   <ce-category-list-fixed
     *ngIf="biomarkers.medicalHistory"
